namespace pg3302_Eksamen
{
    public interface IDealer : IDrawCard, IDiscardCard

    {
    }
}