namespace pg3302_Eksamen
{
    public interface IDrawCard
    {
        Cards DrawCard();
        void DrawSpecialCards();
    }
}